--- a/xrLUA/LUA_TEST/LUA_TEST.vcproj
+++ b/xrLUA/LUA_TEST/LUA_TEST.vcproj
@@ -1,136 +1,197 @@
 <?xml version="1.0" encoding="windows-1251"?>
 <VisualStudioProject
 	ProjectType="Visual C++"
-	Version="7.10"
+	Version="8,00"
 	Name="LUA_TEST"
 	ProjectGUID="{67276AC3-3221-442E-9760-BA349C6880EA}"
 	SccProjectName="SAK"
 	SccAuxPath="SAK"
 	SccLocalPath="SAK"
 	SccProvider="SAK"
-	Keyword="Win32Proj">
+	Keyword="Win32Proj"
+	>
 	<Platforms>
 		<Platform
-			Name="Win32"/>
+			Name="Win32"
+		/>
 	</Platforms>
+	<ToolFiles>
+	</ToolFiles>
 	<Configurations>
 		<Configuration
 			Name="Debug|Win32"
 			OutputDirectory="x:\"
 			IntermediateDirectory="Debug"
 			ConfigurationType="1"
-			CharacterSet="2">
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
+			CharacterSet="2"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="0"
-				EnableFiberSafeOptimizations="FALSE"
-				OptimizeForProcessor="0"
+				EnableFiberSafeOptimizations="false"
 				PreprocessorDefinitions="WIN32;_DEBUG;_CONSOLE;DEBUG;_WINDOWS;_USRDLL;LUA_TEST;"
-				MinimalRebuild="TRUE"
-				ExceptionHandling="TRUE"
+				MinimalRebuild="true"
+				ExceptionHandling="1"
 				BasicRuntimeChecks="3"
-				SmallerTypeCheck="TRUE"
+				SmallerTypeCheck="true"
 				RuntimeLibrary="1"
-				EnableFunctionLevelLinking="FALSE"
-				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="3"
+				EnableFunctionLevelLinking="false"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="2"
 				BrowseInformation="0"
 				WarningLevel="4"
-				Detect64BitPortabilityProblems="TRUE"
+				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				CallingConvention="0"/>
+				CallingConvention="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
-				IgnoreImportLibrary="TRUE"
-				AdditionalDependencies="odbc32.lib odbccp32.lib x:\xr_3da.lib "
+				IgnoreImportLibrary="true"
+				AdditionalDependencies="odbc32.lib odbccp32.lib x:\xr_3da.lib"
 				OutputFile="x:\xrLuaCompiler.exe"
 				LinkIncremental="2"
-				SuppressStartupBanner="TRUE"
-				GenerateDebugInformation="TRUE"
+				SuppressStartupBanner="true"
+				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/LUA_TEST.pdb"
-				GenerateMapFile="TRUE"
+				GenerateMapFile="true"
 				SubSystem="1"
-				TargetMachine="0"/>
+				TargetMachine="0"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 		<Configuration
 			Name="Release|Win32"
 			OutputDirectory="x:\"
 			IntermediateDirectory="Release"
 			ConfigurationType="1"
+			InheritedPropertySheets="$(VCInstallDir)VCProjectDefaults\UpgradeFromVC71.vsprops"
 			CharacterSet="2"
-			WholeProgramOptimization="TRUE">
+			WholeProgramOptimization="1"
+			>
+			<Tool
+				Name="VCPreBuildEventTool"
+			/>
+			<Tool
+				Name="VCCustomBuildTool"
+			/>
+			<Tool
+				Name="VCXMLDataGeneratorTool"
+			/>
+			<Tool
+				Name="VCWebServiceProxyGeneratorTool"
+			/>
+			<Tool
+				Name="VCMIDLTool"
+			/>
 			<Tool
 				Name="VCCLCompilerTool"
 				Optimization="3"
-				GlobalOptimizations="TRUE"
 				InlineFunctionExpansion="2"
-				EnableIntrinsicFunctions="TRUE"
+				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
-				OmitFramePointers="TRUE"
-				OptimizeForProcessor="2"
+				OmitFramePointers="true"
 				PreprocessorDefinitions="WIN32;NDEBUG;_CONSOLE"
-				ExceptionHandling="FALSE"
+				ExceptionHandling="0"
 				RuntimeLibrary="0"
 				EnableEnhancedInstructionSet="1"
-				RuntimeTypeInfo="TRUE"
-				UsePrecompiledHeader="3"
+				RuntimeTypeInfo="true"
+				UsePrecompiledHeader="2"
 				WarningLevel="3"
-				Detect64BitPortabilityProblems="TRUE"
+				Detect64BitPortabilityProblems="true"
 				DebugInformationFormat="3"
-				CallingConvention="0"/>
+				CallingConvention="0"
+			/>
 			<Tool
-				Name="VCCustomBuildTool"/>
+				Name="VCManagedResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCResourceCompilerTool"
+			/>
+			<Tool
+				Name="VCPreLinkEventTool"
+			/>
 			<Tool
 				Name="VCLinkerTool"
 				OutputFile="x:\xrLuaCompiler.exe"
 				LinkIncremental="1"
-				GenerateDebugInformation="TRUE"
+				GenerateDebugInformation="true"
 				SubSystem="1"
 				OptimizeReferences="2"
 				EnableCOMDATFolding="2"
-				TargetMachine="1"/>
+				TargetMachine="1"
+			/>
 			<Tool
-				Name="VCMIDLTool"/>
+				Name="VCALinkTool"
+			/>
 			<Tool
-				Name="VCPostBuildEventTool"/>
+				Name="VCManifestTool"
+			/>
 			<Tool
-				Name="VCPreBuildEventTool"/>
+				Name="VCXDCMakeTool"
+			/>
 			<Tool
-				Name="VCPreLinkEventTool"/>
+				Name="VCBscMakeTool"
+			/>
 			<Tool
-				Name="VCResourceCompilerTool"/>
+				Name="VCFxCopTool"
+			/>
 			<Tool
-				Name="VCWebServiceProxyGeneratorTool"/>
+				Name="VCAppVerifierTool"
+			/>
 			<Tool
-				Name="VCXMLDataGeneratorTool"/>
+				Name="VCWebDeploymentTool"
+			/>
 			<Tool
-				Name="VCWebDeploymentTool"/>
-			<Tool
-				Name="VCManagedWrapperGeneratorTool"/>
-			<Tool
-				Name="VCAuxiliaryManagedWrapperGeneratorTool"/>
+				Name="VCPostBuildEventTool"
+			/>
 		</Configuration>
 	</Configurations>
 	<References>
@@ -138,244 +199,319 @@
 	<Files>
 		<Filter
 			Name="Lua-test"
-			Filter="">
+			>
 			<File
-				RelativePath=".\alife_abstract_registry.h">
+				RelativePath=".\alife_abstract_registry.h"
+				>
 			</File>
 			<File
-				RelativePath=".\alife_abstract_registry_inline.h">
+				RelativePath=".\alife_abstract_registry_inline.h"
+				>
 			</File>
 			<File
-				RelativePath=".\box_collision.cpp">
+				RelativePath=".\box_collision.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\callback_test.cpp">
+				RelativePath=".\callback_test.cpp"
+				>
 				<FileConfiguration
 					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\delegate_test.cpp">
-			</File>
-			<File
-				RelativePath=".\directx_test.cpp">
-			</File>
-			<File
-				RelativePath=".\FastDelegate.h">
-			</File>
-			<File
-				RelativePath=".\intrusive_ptr.h">
-			</File>
-			<File
-				RelativePath=".\intrusive_ptr_inline.h">
-			</File>
-			<File
-				RelativePath=".\lesha_test.cpp">
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
+					ExcludedFromBuild="true"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="0"/>
+					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\LUA_TEST.cpp">
-			</File>
-			<File
-				RelativePath=".\profiler_test.cpp">
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\registry_test.cpp">
-				<FileConfiguration
-					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
-					<Tool
-						Name="VCCLCompilerTool"/>
-				</FileConfiguration>
-			</File>
-			<File
-				RelativePath=".\script_class.cpp">
-			</File>
-			<File
-				RelativePath=".\script_class.h">
-			</File>
-			<File
-				RelativePath=".\script_class0.h">
-			</File>
-			<File
-				RelativePath=".\script_class1.h">
-			</File>
-			<File
-				RelativePath=".\stdafx.cpp">
-				<FileConfiguration
-					Name="Debug|Win32">
+					ExcludedFromBuild="true"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
-				</FileConfiguration>
-				<FileConfiguration
-					Name="Release|Win32">
-					<Tool
-						Name="VCCLCompilerTool"
-						UsePrecompiledHeader="1"/>
+					/>
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\stdafx.h">
+				RelativePath=".\delegate_test.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\test0.cpp">
+				RelativePath=".\directx_test.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\FastDelegate.h"
+				>
+			</File>
+			<File
+				RelativePath=".\intrusive_ptr.h"
+				>
+			</File>
+			<File
+				RelativePath=".\intrusive_ptr_inline.h"
+				>
+			</File>
+			<File
+				RelativePath=".\lesha_test.cpp"
+				>
 				<FileConfiguration
 					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
+					ExcludedFromBuild="true"
+					>
 					<Tool
 						Name="VCCLCompilerTool"
-						CallingConvention="2"/>
+						UsePrecompiledHeader="0"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
+					ExcludedFromBuild="true"
+					>
 					<Tool
-						Name="VCCLCompilerTool"/>
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\LUA_TEST.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\profiler_test.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\registry_test.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\script_class.cpp"
+				>
+			</File>
+			<File
+				RelativePath=".\script_class.h"
+				>
+			</File>
+			<File
+				RelativePath=".\script_class0.h"
+				>
+			</File>
+			<File
+				RelativePath=".\script_class1.h"
+				>
+			</File>
+			<File
+				RelativePath=".\stdafx.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						UsePrecompiledHeader="1"
+					/>
+				</FileConfiguration>
+			</File>
+			<File
+				RelativePath=".\stdafx.h"
+				>
+			</File>
+			<File
+				RelativePath=".\test0.cpp"
+				>
+				<FileConfiguration
+					Name="Debug|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+						CallingConvention="2"
+					/>
+				</FileConfiguration>
+				<FileConfiguration
+					Name="Release|Win32"
+					ExcludedFromBuild="true"
+					>
+					<Tool
+						Name="VCCLCompilerTool"
+					/>
 				</FileConfiguration>
 			</File>
 		</Filter>
 		<Filter
 			Name="tests"
-			Filter="">
+			>
 			<File
-				RelativePath=".\abstract_registry.cpp">
+				RelativePath=".\abstract_registry.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\broker_test.cpp">
+				RelativePath=".\broker_test.cpp"
+				>
 				<FileConfiguration
 					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
+					ExcludedFromBuild="true"
+					>
 					<Tool
-						Name="VCCLCompilerTool"/>
+						Name="VCCLCompilerTool"
+					/>
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\client_id.h">
+				RelativePath=".\client_id.h"
+				>
 			</File>
 			<File
-				RelativePath=".\NET_utils.h">
+				RelativePath=".\NET_utils.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_broker.h">
+				RelativePath=".\object_broker.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_cloner.h">
+				RelativePath=".\object_cloner.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_comparer.h">
+				RelativePath=".\object_comparer.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_destroyer.h">
+				RelativePath=".\object_destroyer.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_interfaces.h">
+				RelativePath=".\object_interfaces.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_loader.h">
+				RelativePath=".\object_loader.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_saver.h">
+				RelativePath=".\object_saver.h"
+				>
 			</File>
 			<File
-				RelativePath=".\object_type_traits.h">
+				RelativePath=".\object_type_traits.h"
+				>
 			</File>
 			<File
-				RelativePath=".\time_intrusive_ptr.h">
+				RelativePath=".\time_intrusive_ptr.h"
+				>
 			</File>
 			<File
-				RelativePath=".\time_intrusive_ptr_inline.h">
+				RelativePath=".\time_intrusive_ptr_inline.h"
+				>
 			</File>
 			<File
-				RelativePath=".\time_smart_ptr.cpp">
+				RelativePath=".\time_smart_ptr.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\time_smart_ptr.h">
+				RelativePath=".\time_smart_ptr.h"
+				>
 			</File>
 			<File
-				RelativePath=".\time_smart_ptr_inline.h">
+				RelativePath=".\time_smart_ptr_inline.h"
+				>
 			</File>
 		</Filter>
 		<Filter
 			Name="smart_container"
-			Filter="">
+			>
 			<File
-				RelativePath=".\id_generator_test.cpp">
+				RelativePath=".\id_generator_test.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\slipch_test.cpp">
+				RelativePath=".\slipch_test.cpp"
+				>
 				<FileConfiguration
 					Name="Debug|Win32"
-					ExcludedFromBuild="TRUE">
+					ExcludedFromBuild="true"
+					>
 					<Tool
-						Name="VCCLCompilerTool"/>
+						Name="VCCLCompilerTool"
+					/>
 				</FileConfiguration>
 				<FileConfiguration
 					Name="Release|Win32"
-					ExcludedFromBuild="TRUE">
+					ExcludedFromBuild="true"
+					>
 					<Tool
-						Name="VCCLCompilerTool"/>
+						Name="VCCLCompilerTool"
+					/>
 				</FileConfiguration>
 			</File>
 			<File
-				RelativePath=".\slipch_test.h">
+				RelativePath=".\slipch_test.h"
+				>
 			</File>
 			<File
-				RelativePath=".\slipch_use.cpp">
+				RelativePath=".\slipch_use.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\smart_container.cpp">
+				RelativePath=".\smart_container.cpp"
+				>
 			</File>
 			<File
-				RelativePath=".\smart_container.h">
+				RelativePath=".\smart_container.h"
+				>
 			</File>
 			<File
-				RelativePath=".\smart_container_types.h">
+				RelativePath=".\smart_container_types.h"
+				>
 			</File>
 		</Filter>
 	</Files>
 	<Globals>
 		<Global
 			Name="DevPartner_IsInstrumented"
-			Value="0"/>
+			Value="0"
+		/>
 	</Globals>
 </VisualStudioProject>
