update deploy fixed xrai

--- a/Editors/Tools/ETools/ETools.vcproj
+++ b/Editors/Tools/ETools/ETools.vcproj
@@ -271,9 +271,10 @@
 				EnableIntrinsicFunctions="true"
 				FavorSizeOrSpeed="1"
 				EnableFiberSafeOptimizations="true"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\Xiph\Include&quot;;X:\xrQSlim\src"
 				PreprocessorDefinitions="WIN32;DEBUG;NDEBUG;_WINDOWS;_DEBUG;ETOOLS_EXPORTS"
 				StringPooling="true"
-				RuntimeLibrary="2"
+				RuntimeLibrary="3"
 				BufferSecurityCheck="false"
 				EnableFunctionLevelLinking="false"
 				ForceConformanceInForLoopScope="true"
@@ -308,6 +309,7 @@
 				OutputFile="x:\ETools.dll"
 				LinkIncremental="1"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="X:\;&quot;X:\External Library\Xiph\Libs&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="x:\$(ProjectName).pdb"
 				GenerateMapFile="true"
