--- a/xrLC/xrLC.vcproj
+++ b/xrLC/xrLC.vcproj
@@ -4,6 +4,7 @@
 	Version="9,00"
 	Name="xrLC"
 	ProjectGUID="{A4ABD75E-825B-4D09-B3B2-2709682E40C8}"
+	RootNamespace="xrLC"
 	SccProjectName="&quot;$/xrLC&quot;, TLAAAAAA"
 	SccLocalPath="."
 	SccProvider="MSSCCI:Microsoft Visual SourceSafe"
@@ -268,7 +269,7 @@
 				FavorSizeOrSpeed="1"
 				OmitFramePointers="false"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories="..\xrQSlim\src, .\"
+				AdditionalIncludeDirectories="..\xrQSlim\src;.\;x:\xrCore"
 				PreprocessorDefinitions="_USE_MATH_DEFINES,WIN32,_DEBUG,_WINDOWS"
 				StringPooling="true"
 				RuntimeLibrary="2"
