debug more less fixed

--- a/Editors/Tools/ETools/ETools.vcproj
+++ b/Editors/Tools/ETools/ETools.vcproj
@@ -161,6 +161,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				EnableFiberSafeOptimizations="true"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\Xiph\Include&quot;;X:\xrQSlim\src"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;ETOOLS_EXPORTS"
 				MinimalRebuild="true"
 				ExceptionHandling="1"
@@ -203,6 +204,7 @@
 				OutputFile="x:\ETools.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="X:\;&quot;X:\External Library\Xiph\Libs&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				GenerateMapFile="true"
