--- a/xrNetServer/xrNetServer.vcproj
+++ b/xrNetServer/xrNetServer.vcproj
@@ -271,7 +271,7 @@
 				AdditionalOptions=""
 				Optimization="0"
 				EnableFiberSafeOptimizations="true"
-				AdditionalIncludeDirectories=".."
+				AdditionalIncludeDirectories="..;x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;"
 				PreprocessorDefinitions="_DEBUG;WIN32;_WINDOWS;XR_NETSERVER_EXPORTS"
 				StringPooling="false"
 				MinimalRebuild="true"
@@ -309,6 +309,7 @@
 				OutputFile="$(OutDir)\xrNetServer.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="X:\External Library\dxsdk_feb2005\Lib\x86"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				SubSystem="2"
