--- a/xr_3da/xrCPU_Pipe/xrCPU_Pipe.vcproj
+++ b/xr_3da/xrCPU_Pipe/xrCPU_Pipe.vcproj
@@ -165,6 +165,7 @@
 				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="0"
 				EnableFiberSafeOptimizations="true"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\dxsdk_feb2005\Include&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG,DEBUG;_WINDOWS;_USRDLL;XRCPU_PIPE_EXPORTS"
 				StringPooling="false"
 				MinimalRebuild="true"
@@ -206,6 +207,7 @@
 				OutputFile="x:\xrCPU_Pipe.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="&quot;X:\External Library\dxsdk_feb2005\Lib\x86&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				GenerateMapFile="true"
