--- a/xr_3da/xrSound/xrSound.vcproj
+++ b/xr_3da/xrSound/xrSound.vcproj
@@ -49,6 +49,7 @@
 				EnableIntrinsicFunctions="false"
 				FavorSizeOrSpeed="0"
 				EnableFiberSafeOptimizations="true"
+				AdditionalIncludeDirectories="x:\xrCore;&quot;X:\External Library\Xiph\Include&quot;;&quot;x:\External Library\eax\Include&quot;;&quot;X:\External Library\OpenAL_07\Include&quot;;&quot;X:\External Library\OpenAL_07\Include\AL&quot;"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;_USRDLL;XRSOUND_EXPORTS"
 				StringPooling="false"
 				MinimalRebuild="true"
@@ -84,6 +85,7 @@
 				OutputFile="$(OutDir)/xrSound.dll"
 				LinkIncremental="2"
 				SuppressStartupBanner="true"
+				AdditionalLibraryDirectories="X:\;&quot;X:\External Library\OpenAL_07\libs&quot;;&quot;X:\External Library\Xiph\Libs&quot;"
 				GenerateDebugInformation="true"
 				ProgramDatabaseFile="$(OutDir)/$(TargetName).pdb"
 				GenerateMapFile="true"
