--- a/xrQSlim/xrQSlim.vcproj
+++ b/xrQSlim/xrQSlim.vcproj
@@ -47,6 +47,7 @@
 				Name="VCCLCompilerTool"
 				Optimization="0"
 				EnableFiberSafeOptimizations="true"
+				AdditionalIncludeDirectories="x:\xrCore"
 				PreprocessorDefinitions="WIN32;_DEBUG;_WINDOWS;XR_QSLIM_EXPORTS"
 				MinimalRebuild="true"
 				ExceptionHandling="1"
